First page and preliminary "what is"

--- a/css/theme/white.css
+++ b/css/theme/white.css
@@ -45,7 +45,6 @@ body {
   font-weight: 600;
   line-height: 1.2;
   letter-spacing: normal;
-  text-transform: uppercase;
   text-shadow: none;
   word-wrap: break-word; }
 
@@ -226,7 +225,7 @@ body {
   margin: 15px 0px;
   background: rgba(255, 255, 255, 0.12);
   border: 4px solid #222;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
+  box-shadow: none; }
 
 .reveal section img.plain {
   border: 0;
@@ -240,7 +239,7 @@ body {
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
   border-color: #2a76dd;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
+  box-shadow: none; }
 
 /*********************************************
  * NAVIGATION CONTROLS
