--- a/css/theme/white.css
+++ b/css/theme/white.css
@@ -12,7 +12,8 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
  *********************************************/
 body {
   background: #fff;
-  background-color: #fff; }
+  background-color: #fff;
+  background: rgb(248,239,255) url('../../img/background-shades.svg'); }
 
 .reveal {
   font-family: "Source Sans Pro", Helvetica, sans-serif;
@@ -25,7 +26,17 @@ body {
   background: #98bdef;
   text-shadow: none; }
 
-.reveal .slides > section,
+.reveal .slides {
+  padding: 20px 50px;
+  background: rgba(255,255,255, 0.7);
+}
+
+.reveal .slides > section {
+  width: 90%;
+  height: 90%;
+  line-height: 1.3;
+  font-weight: inherit; }
+
 .reveal .slides > section > section {
   line-height: 1.3;
   font-weight: inherit; }
@@ -87,10 +98,14 @@ body {
 .reveal ol,
 .reveal dl,
 .reveal ul {
-   list-style: none;
-   margin-left: 0;
-   padding-left: 0.88em;
-   text-indent: -0.88em; }
+  list-style: none;
+  margin-left: 0;
+  padding-left: 0.88em;
+  text-indent: -0.88em; }
+
+.reveal li {
+  margin: 20px 5px;
+  line-height: 1.1; }
 
 .reveal dt {
   font-weight: bold; }
@@ -105,16 +120,12 @@ body {
 .reveal blockquote {
   display: block;
   position: relative;
-
   font-family: Georgia, serif;
   font-style: italic;
   margin: 0.25em 0;
   padding: 0.35em 40px;
   line-height: 1.45;
-  color: #383838;
-  /*
-  background: rgba(0, 0, 0, 0.05);
-  border-left: 4px solid #ddd;*/ }
+  color: #383838; }
 
 .reveal blockquote:before {
   display: block;
