--- a/css/theme/white.css
+++ b/css/theme/white.css
@@ -60,19 +60,21 @@ body {
   word-wrap: break-word; }
 
 .reveal h1 {
-  font-size: 2.5em; }
+  font-size: 2.5em;
+  font-family: "Quicksand", sans-serif;
+  text-shadow: none; }
 
 .reveal h2 {
-  font-size: 1.6em; }
+  font-size: 1.4em;
+  font-family: "Quicksand", sans-serif; }
 
 .reveal h3 {
-  font-size: 1.3em; }
+  font-size: 1.3em;
+  font-family: "Quicksand", sans-serif; }
 
 .reveal h4 {
-  font-size: 1em; }
-
-.reveal h1 {
-  text-shadow: none; }
+  font-size: 1em;
+  font-family: "Quicksand", sans-serif; }
 
 /*********************************************
  * OTHER
