--- a/css/theme/white.css
+++ b/css/theme/white.css
@@ -61,20 +61,16 @@ body {
 
 .reveal h1 {
   font-size: 2.5em;
-  font-family: "Quicksand", sans-serif;
   text-shadow: none; }
 
 .reveal h2 {
-  font-size: 1.4em;
-  font-family: "Quicksand", sans-serif; }
+  font-size: 1.6em; }
 
 .reveal h3 {
-  font-size: 1.3em;
-  font-family: "Quicksand", sans-serif; }
+  font-size: 1.3em; }
 
 .reveal h4 {
-  font-size: 1em;
-  font-family: "Quicksand", sans-serif; }
+  font-size: 1em; }
 
 /*********************************************
  * OTHER
